# Watery

./: CMakeLists.txt  README.md  main.cpp
Demo/Assets/Shapes/: role.shp
Demo/Mac/: Watery
Demo/Mac/Assets/VertexArrays/: laji.va  pepper.va  tank.va
Demo/Mac/Scripts/Shaders/: background.frag  sprite.frag
Demo/Mac/Sources/: logic.cpp  logic.h  main.cpp
Demo/Scripts/Levels/: demo.xml
Demo/Sources/: logic.cpp
Demo/Win/Project/: GameSample.sln
Demo/Win/Project/GameSample/: Audio.h  BitmapObjects.cpp  BitmapObjects.h  Bullets.cpp  DemoApp.h  GameFunc.cpp  GameSample.aps  GameSample.h  GameSample.rc  GameSample.vcxproj  GameSample.vcxproj.filters  Objects.cpp  ReadMe.txt  Render.cpp  Resource.h  Stage.cpp  Stage.h  TextObjects.h  WhatYouNeverNeedToMind.cpp  WinMain.cpp  WndProc.cpp  stdafx.cpp  stdafx.h  targetver.h
Doc/: Watery.mdj  游戏第一关剧本.docx
Engine/Animation/: animation.cpp  animation.h
Engine/Component/: coord.h  position.h
Engine/Input/: input.cpp  input.h
Engine/Message/: message.cpp  message.h  message_bus.cpp  message_bus.h  messenger.h
Engine/Object/: entity.cpp
Engine/Renderer/: renderer.h
Engine/Resource/: resource_manager.cpp  resource_manager.h
Engine/Scene/: scene.h
Engine/System/: system.cpp  system.h
Game/Assets/Shapes/: big_role.shp  pepper.shp  rect.shp  role.shp  small_bullet.shp
Game/Assets/VertexArrays/: background.va  face.va  pyramid.va  rect.va  small_bullet.va  test.va  test.xml
Game/Scripts/Levels/: demo.xml
Game/Scripts/Shaders/: rect.frag  rect.vert  rectangle.frag  rectangle.vert  sprite.frag  sprite.vert  sprite_mono.frag  standard.frag  standard.vert
Game/Sources/: game.cpp  game.h  logic.cpp  logic.h  main.cpp  plane.cpp  plane.h
Middleware/Graphics/: graphics.cpp  graphics.h
Middleware/HID/: keyboard.cpp  keyboard.h
Middleware/Network/: network.cpp  network.h
Middleware/Physics/: physics.cpp
Watery/: Doxyfile
Watery/Data/Bitmap/: bitmap.cpp  bitmap.h
Watery/Data/Color/: color.cpp  color.h
Watery/Data/Coord/: coord.cpp  coord.h
Watery/Data/Matrix/: matrix.cpp  matrix.h
Watery/Data/Quaternion/: quaternion.cpp  quaternion.h
Watery/Data/Size/: size.cpp  size.h
Watery/Data/Vector/: vector.cpp  vector.h
Watery/Engine/Camera/: camera.cpp  camera.h
Watery/Engine/Commuication/: communication.cpp
Watery/Engine/Component/: AI_position_animation.cpp  AI_position_animation.h  angular_velocity.cpp  angular_velocity.h  animation.h  audio.h  bounding_shape.h  component.cpp  component.h  component_factory.cpp  component_factory.h  component_manager.cpp  component_manager.h  component_node.h  constraint.h  frame_animation.cpp  frame_animation.h  health.cpp  health.h  helix_animation.cpp  helix_animation.h  helix_move_animation.cpp  helix_move_animation.h  lifetime.h  position.cpp  position.h  position_animation.h  random_move_animation.cpp  random_move_animation.h  rotation.h  scale.h  shader.cpp  shader.h  shrink_animation.cpp  shrink_animation.h  text.cpp  text.h  texture.cpp  texture.h  velocity.cpp  (+4 more)
Watery/Engine/Configuration/: default.h
Watery/Engine/Configure/: configure.h
Watery/Engine/Game/: game.cpp  game.h
Watery/Engine/Input/: input.cpp  input.h
Watery/Engine/Loader/: loader.cpp  loader.h
Watery/Engine/Mathematics/: mathematics.cpp  mathematics.h  matrix.cpp  matrix.h  quaternion.cpp  vector.cpp  vector.h
Watery/Engine/Message/: collision_event.h  dying_event.h  keyboard_event.h  keyboard_message.cpp  keyboard_message.h  message.h  message_bus.cpp  message_bus.h  messenger.cpp  messenger.h  mouse_event.h  mouse_message.h
Watery/Engine/Object/: camera.cpp  camera.h  entity.h  object.h
Watery/Engine/Physics/: circle.cpp  circle.h  physics.cpp  physics.h  rectangle.cpp  rectangle.h  shape.h
Watery/Engine/Renderer/: renderer.cpp  renderer.h
Watery/Engine/Resource/: al_audio_wrapper.cpp  al_audio_wrapper.h  gl_shader_wrapper.cpp  gl_shader_wrapper.h  gl_texture_wrapper.cpp  gl_texture_wrapper.h  gl_vertex_array_wrapper.cpp  gl_vertex_array_wrapper.h  resource.cpp  resource.h  resource_manager.cpp  resource_manager.h  resource_wrapper.h  shape_wrapper.cpp  shape_wrapper.h
Watery/Engine/Scene/: camera.cpp  camera.h  object.cpp  object.h  scene.cpp  scene.h  world.cpp  world.h
Watery/Engine/Sound/: sound.cpp  sound.h
Watery/Engine/System/: communication.cpp  communication.h  controller.cpp  controller.h  input.cpp  input.h  logic.cpp  logic.h  render.cpp  render.h  renderer.cpp  renderer.h  scene.cpp  scene.h  sound.cpp  sound.h  system.cpp  system.h
Watery/Engine/Timer/: timer.cpp  timer.h
Watery/Engine/World/: camera.cpp  camera.h  entity.h  object.h  world.cpp  world.h
Watery/Framework/Audio/: al_audio.cpp  al_audio.h  al_initializer.cpp  al_initializer.h  audio.cpp  audio.h
Watery/Framework/Clock/: clock.cpp  clock.h
Watery/Framework/Context/: context.cpp  context.h
Watery/Framework/Graphics/: gl_graphics.cpp  gl_graphics.h  gl_shader.cpp  gl_shader.h  gl_text.cpp  gl_text.h  gl_texture.cpp  gl_texture.h  gl_vertex_array.cpp  gl_vertex_array.h  graphics.cpp  graphics.h
Watery/Framework/HID/: keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
Watery/Framework/Image/: lodepng.cpp  lodepng.h
Watery/Framework/Mathematics/: quaternion.h  vector.cpp  vector.h
Watery/Framework/MessageBus/: message_bus.h
Watery/Framework/Network/: client.cpp  client.h  network.cpp  network.h  server.cpp  server.h
Watery/Framework/Physics/: circle.cpp  physics.h
Watery/Framework/Window/: window.cpp  window.h
Watery/Framework/XML/: xml_document.cpp  xml_document.h  xml_element.cpp  xml_element.h  xml_parser.h
